feat(social): implement core architecture and UI for reviews and comments
- Create DTOs (ReviewDto, CommentDto, Requests) mapped to backend data structures

- Build ReviewService

- Integrate dynamic JavaFX components in ShowDetailController to render reviews and comment threads

- Add toggle logic for likes